# Exercise-code

./: README.md
Algorithms/: 100!.txt  10进制转化16进制.txt  12345.txt  16进制转化10进制.txt  README.md  cal_100_factorial.c  cls.txt  fibonacci_sequence.c  hash.txt  k.c  lcs.txt  malloc.txt  n数的最大乘积.txt  package_01.txt  yue_se_fu_huan.c  全排列.txt  删除数组0元素.txt  动态数组.txt  区间k大数.txt  十六进制转八进制 .txt  回文数.txt  复述归.txt  大小写转化.txt  字数组最大和算法.txt  完全背包.txt  平时代码.txt  排序.txt  数列排序.txt  数据结构.txt  最大K乘积.txt  最小乘积.txt  格子刷油漆.txt  每天一到算法题.txt  每天一道算法2.txt  每天一道算法3.txt  每天一道算法4.txt  矩阵乘法.txt  第二大整数.txt  节点选择.txt  蓝桥杯.txt  (+3 more)
C/: judge_little_or_end.c  switch_specail_use.c  typedef_and_funcptr.c
C++/: 2016_8_5输出这样的图形.txt  8_4_test.cpp  FindKthToTail.cpp  FindNumbersWithSum.cpp  FindNumsAppearOnce.cpp  FirstNotRepeatingChar.cpp  GetNumberOfK.cpp  IsBalanced_Solution.cpp  README.md  Smartpoint.cpp  allsort.cpp  brige.cpp  common_select_sort.c  const.cpp  const_8_4.cpp  construct_one.cpp  construct_two.cpp  copy_construct.cpp  dp_min_matrix_value.cpp  dynamic_cast.cpp  initilizer_one.cpp  instance_sum.c  is_include_tree.cpp  maxSubArray.c  max_min__8_5.cpp  median_of_two_sorted-arrays.cpp  merge_two_list.cpp  min_stack.cpp  more_than_array_number_half.cpp  myexception.cpp  mymap.cpp  mymemcpy.c  no_add_add.c  operator.cpp  parse_uri.cpp  pow.cpp  printMatrix.cpp  randomshuffle.c  reConstructTree.cpp  reOrderArray.cpp  (+24 more)
Design-patterns/: README.md  代理模式.txt  工厂模式.txt  桥接模式.txt  简单工厂模式.txt  蒙面模式.txt  (+2 more)
cmake/: CMakeLists.txt  README.md  main.cc
cmake/third_part/: CMakeLists.txt  myprint.cc  myprint.h
(+147 files in other folders)
